--- a/example/src/index.html
+++ b/example/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr" class="hydrated">
   <head>
     <meta charset="UTF-8" />
@@ -13,12 +13,14 @@
     <main>
       <h1>Capacitor Test Plugin Project</h1>
       <p>
-        This project can be used to test out the functionality of your plugin. Nothing in the <em>example/</em> folder
-        will be published to npm when using this template, so you can create away!
+        This project can be used to test out the functionality of your plugin.
+        Nothing in the <em>example/</em> folder will be published to npm when
+        using this template, so you can create away!
       </p>
-      <label for="echoInput">Echo Text:</label>
-      <input type="text" id="echoInput" name="echoInput" value="Hello World!" />
-      <button onclick="testEcho()">Click Me!</button>
+
+      <button onclick="testAllowSleep()">Test Allow Sleep</button>
+      <hr />
+      <button onclick="testDontAllowSleep()">Test Dont Allow Sleep</button>
     </main>
 
     <script src="./js/example.js" type="module"></script>
